# Frappe-FlowAgent

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml
flowagent/: hooks.py  install.py  modules.txt  patches.txt  tasks.py
flowagent/api/: ai_build.py  studio.py  webhook.py
flowagent/engine/: __init__.py  context.py  runner.py
flowagent/engine/nodes/: __init__.py  ai_nodes.py  frappe_nodes.py  integration_nodes.py  logic_nodes.py  transform_nodes.py  triggers.py
flowagent/flowagent_core/dashboard_chart/flowagent_cost_trend/: flowagent_cost_trend.json
flowagent/flowagent_core/dashboard_chart/flowagent_daily_runs/: flowagent_daily_runs.json
flowagent/flowagent_core/dashboard_chart/flowagent_status_breakdown/: flowagent_status_breakdown.json
flowagent/flowagent_core/dashboard_chart/flowagent_top_workflows/: flowagent_top_workflows.json
flowagent/flowagent_core/doctype/flowagent_settings/: flowagent_settings.js  flowagent_settings.json  flowagent_settings.py
flowagent/flowagent_core/doctype/flowagent_workflow/: flowagent_workflow.js  flowagent_workflow.json  flowagent_workflow.py
flowagent/flowagent_core/doctype/flowagent_workflow_run/: flowagent_workflow_run.json  flowagent_workflow_run.py
flowagent/flowagent_core/doctype/flowagent_workflow_run_step/: flowagent_workflow_run_step.json  flowagent_workflow_run_step.py
flowagent/flowagent_core/doctype/flowagent_workflow_trigger_index/: flowagent_workflow_trigger_index.json  flowagent_workflow_trigger_index.py
flowagent/flowagent_core/doctype/flowagent_workflow_version/: flowagent_workflow_version.json  flowagent_workflow_version.py
flowagent/public/css/: flowagent.css
flowagent/public/js/: flowagent.js
flowagent/triggers/: doctype_dispatcher.py  loop_guard.py  schedule_dispatcher.py
(+23 files in other folders)
